--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:design:22.2.1'
     compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/volley.jar')
 }
